# desktop-api

./: .gitignore  README.md  pyproject.toml
examples/: click_capture_logger.py  clicker.py  demo.py  dummy_agent_loop.py
src/desktop_api/: __init__.py  capture.py  controller.py  window.py
tests/: __init__.py
